test/parallel/cobegin/errors/cobeginSyntaxError.good
cobeginSyntaxError.chpl:4: error: syntax error near 'count$'
